add support for ES8

--- a/settings.gradle
+++ b/settings.gradle
@@ -43,6 +43,8 @@ include 'redis-persistence'
 
 include 'es6-persistence'
 
+include 'es8-persistence'
+
 include 'redis-lock'
 
 include 'awss3-storage'
