--- a/springboot-bom-overrides.gradle
+++ b/springboot-bom-overrides.gradle
@@ -14,8 +14,10 @@
 // Contains overrides for Spring Boot Dependency Management plugin
 // Dependency version override properties can be found at https://docs.spring.io/spring-boot/docs/3.1.4/reference/htmlsingle/#appendix.dependency-versions.properties
 
-// Conductor's default is ES6, but SB brings in ES7
-ext['elasticsearch.version'] = revElasticSearch7
+// Override Elasticsearch versions - Spring Boot manages these through its BOM
+// Both elasticsearch.version and elasticsearch-client.version control different artifacts
+ext['elasticsearch.version'] = revElasticSearch8
+ext['elasticsearch-client.version'] = revElasticSearch8
 
 // SB brings groovy 3.0.x which is not compatible with Spock
 ext['groovy.version'] = revGroovy
